--- a/foundry.toml
+++ b/foundry.toml
@@ -3,3 +3,10 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 fs_permissions = [{ access = "read", path = "./"}]
+
+[rpc_endpoints]
+sepolia = "https://sepolia.infura.io/v3/${INFURA_KEY}"
+goerli = "https://goerli.infura.io/v3/${INFURA_KEY}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_KEY}" }
