--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/solidstate-solidity"]
+	path = lib/solidstate-solidity
+	url = https://github.com/solidstate-network/solidstate-solidity
+	branch = v0.0.56
