--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,7 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+	branch = v1.5.5
 [submodule "lib/diamond-3"]
 	path = lib/diamond-3
 	url = https://github.com/mudgen/diamond-3
@@ -13,3 +14,6 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = v4.8.3
+[submodule "lib/solidity-stringutils"]
+	path = lib/solidity-stringutils
+	url = https://github.com/Arachnid/solidity-stringutils
